--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
+    <header class="header">
+      <div class="header__bar row">
+        <h1 class="grid-6"><a href="/">CampersLife</a></h1>
+        <div class="user_nav grid-6">
+          <a class="post" href="#">投稿する</a>
+        </div>
+      </div>
+    </header>
     <%= yield %>
+    <footer>
+      <p>
+        Copyright CampersLife 2023.
+      </p>
+    </footer>
   </body>
 </html>
