--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,13 @@
       <div class="header__bar row">
         <h1 class="grid-6"><a href="/">CampersLife</a></h1>
         <div class="user_nav grid-6">
-          <a class="post" href="#">投稿する</a>
+          <% if user_signed_in? %>
+            <li><%= link_to "投稿する", new_post_path %></li>
+            <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to 'ログイン', new_user_session_path %></li>
+            <li><%= link_to '新規登録', new_user_registration_path %></li>
+          <% end %>
         </div>
       </div>
     </header>
