--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
           <% if user_signed_in? %>
             <li><%= link_to "投稿する", new_post_path %></li>
             <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+            <li><%= current_user.nickname%>さんの<%= link_to "マイページ", "#" %></li>
           <% else %>
             <li><%= link_to 'ログイン', new_user_session_path %></li>
             <li><%= link_to '新規登録', new_user_registration_path %></li>
