--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,19 +22,19 @@
           <%= @post.article %>
         </div>
         <div class="good">
-          <% if @post.gooded_by?(current_user) %>
+          <%# if @post.gooded_by?(current_user) %>
           <p>
-          <%= link_to post_goods_path(@post), method: :delete do %>
-            <span class="goodmark">♥</span><%= @post.goods.count %> いいね
-          <% end %>
+          <%#= link_to post_goods_path(@post), method: :delete do %>
+            <span class="goodmark">♥</span><%#= @post.goods.count %> いいね
+          <%# end %>
           </p>
-          <% else %>
+          <%# else %>
           <p>
-          <%= link_to post_goods_path(@post), method: :post do %>
-            <span class="goodmark">♡</span><%= @post.goods.count %> いいね
-          <% end %>
+          <%#= link_to post_goods_path(@post), method: :post do %>
+            <span class="goodmark">♡</span><%#= @post.goods.count %> いいね
+          <%# end %>
           </p>
-          <% end %>
+          <%# end %>
         </div>
       </div>
 
@@ -47,7 +47,7 @@
         </li>
         <li class="list">
           <div class='post-link'>
-            <p>　リンク：<%= raw Rinku.auto_link(@post.link) %></p>
+            <p>　リンク：<%= @post.link %></p>
           </div>
         </li>
         <div class="list">
@@ -65,11 +65,11 @@
     <%# コメント一覧 %>
     <div class="comment">
     <% if user_signed_in? %>
-      <%= form_with(model: [@post, @comment]) do |form| %>
-        <%= form.text_area :text, placeholder: "コメントする", rows: "2", class: "form-comment" %>
-        <%= form.submit "投稿", class: "comment-submit" %>
-      <% end %>
-    <% else %>
+      <%#= form_with(model: [@post, @comment]) do |form| %>
+        <%#= form.text_area :text, placeholder: "コメントする", rows: "2", class: "form-comment" %>
+        <%#= form.submit "投稿", class: "comment-submit" %>
+      <%# end %>
+    <%# else %>
       <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
     <% end %>
     </div>
