--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -49,7 +49,7 @@
             </li>
             <li class="list">
             <div class='post-link'>
-              <p>　リンク：<%= link_to "post.link", "#" %></p>
+              <p>　リンク：<%= link_to post.link, "post.link" %></p>
             </div>
             </li>
           </div>
