--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -65,16 +65,26 @@
     <%# コメント一覧 %>
     <div class="comment">
     <% if user_signed_in? %>
-      <%#= form_with(model: [@post, @comment]) do |form| %>
-        <%#= form.text_area :text, placeholder: "コメントする", rows: "2", class: "form-comment" %>
-        <%#= form.submit "投稿", class: "comment-submit" %>
-      <%# end %>
-    <%# else %>
+      <%= form_with(model: [@post, @comment]) do |form| %>
+        <%= form.text_area :text, placeholder: "コメントする", rows: "2", class: "form-comment" %>
+        <%= form.submit "投稿", class: "comment-submit" %>
+      <% end %>
+    <% else %>
       <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
     <% end %>
     </div>
     <div class="comments">
       <h4>＜コメント一覧＞</h4>
+
+      <div class="comments">
+      <h4>＜コメント一覧＞</h4>
+      <%# @comments.each do |comment| %>
+        <p>
+          <strong><%#= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
+          <%#= comment.text %>
+        </p>
+      <%# end %>
+    </div>
       
     </div>
     <div class="sell-btn-contents">
